Fixed some layout issues with homepage, added more styling to project links on homepage.

--- a/app/index.css
+++ b/app/index.css
@@ -126,7 +126,7 @@ a:hover {
 
 .homepage {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   background-color: #e0edff;
 }
 
@@ -134,36 +134,50 @@ a:hover {
   padding: 10px 25px;
 }
 
-.project-list-section {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  justify-content: center;
-}
-
 .projects-list {
-  color: #6e42f4;
   margin: 0 auto;
   display: flex;
-  flex-wrap: wrap;
-}
-.projects-list li {
-  display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  width: 250px;
-  height: 80px;
-  margin: 0 20px 20px 0;
-  background-color: #222222;
+}
+
+.projects-list-project {
+  display: flex;
+  width: 70%;
+  height: 400px;
+  border: 8px solid #6e42f4;
+  border-radius: 8px;
+  overflow: hidden;
+  background-size: cover;
+  background-position: center;
+  margin-bottom: 30px;
+}
+
+#weatherApp-project {
+  background-image: url("./Images/weatherApp5.png");
+}
+#bloodborne-project {
+  background-image: url("./Images/bloodborne7.png");
+}
+#corvid-project {
+  background-image: url("./Images/corvid1.png");
+}
+
+.project-link {
+  background: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.274));
+  width: 50%;
   color: #fafafa;
-  border-radius: 5px;
+  font-size: 1.2em;
+  font-weight: bold;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding-top: 60px;
 }
-.projects-list li:hover {
-  cursor: pointer;
-  background-color: #6e42f4;
-}
-.projects-list a {
-  color: inherit;
+
+.project-info {
+  width: 50%;
 }
 
 .mainContent a {
@@ -217,13 +231,14 @@ h2 {
 
 .resume-section {
   text-align: left;
-  margin: 10px 0;
+  padding: 10px 0;
 }
 
 .tech-icons {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
+  margin-top: 10px;
 }
 
 .tech-icons .icon {
@@ -429,8 +444,22 @@ h2 {
     width: 90vw;
   }
 
-  .projects-list li {
-    width: inherit;
+  .projects-list-project {
+    flex-direction: column;
+  }
+
+  .project-link {
+    width: 100%;
+    height: 30%;
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
+    background: none;
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+
+  .project-info {
+    width: 100%;
   }
 
   .project-list {
